apps/michelle-care-web/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: michelle-care-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /this-secret
