apps/michelle-care-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: michelle-care-web
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: michelle-care-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: michelle-care-web
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-root
          readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: elwing
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /home/michelle/site-root
          type: DirectoryOrCreate
        name: web-root
      - hostPath:
          path: /home/michelle/michelle-care
          type: Directory
        name: git-repo
