apps/michelle-care-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: michelle-care-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: michelle-care-web
  sessionAffinity: None
  type: ClusterIP
