apps/michelle-care-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michelle-care-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-michelle-care-stripprefix@kubernetescrd
spec:
  ingressClassName: public
  rules:
  - host: michelle.care
    http:
      paths:
      - backend:
          service:
            name: michelle-care-svc
            port:
              number: 80
        path: /this-secret
        pathType: Prefix
  - host: www.michelle.care
    http:
      paths:
      - backend:
          service:
            name: michelle-care-svc
            port:
              number: 80
        path: /this-secret
        pathType: Prefix
  - host: michelle.service
    http:
      paths:
      - backend:
          service:
            name: michelle-care-svc
            port:
              number: 80
        path: /this-secret
        pathType: Prefix
  tls:
  - hosts:
    - michelle.care
    - www.michelle.care
    - michelle.service
    secretName: michelle-care-tls
